[gd_scene load_steps=9 format=3 uid="uid://xwp86nkyxc6b"]

[ext_resource type="Script" uid="uid://bg31b2058b2ik" path="res://scripts/general_village.gd" id="1_ve18s"]
[ext_resource type="Shader" uid="uid://o0rretc0csid" path="res://scenes/general_village.gdshader" id="2_my47q"]
[ext_resource type="Texture2D" uid="uid://cyqxcq14275u5" path="res://graphics/backgrounds/bg3.png" id="3_my47q"]
[ext_resource type="Texture2D" uid="uid://0d2smild1ql0" path="res://graphics/sprites/test_sprite9.png" id="4_5bsx0"]
[ext_resource type="Script" uid="uid://dvk42s4w3g8ib" path="res://scripts/party_panel.gd" id="4_sr4ki"]
[ext_resource type="PackedScene" uid="uid://deaiudtr5umhp" path="res://scenes/monster_entry_button.tscn" id="6_ltora"]
[ext_resource type="Script" uid="uid://bhsu6ri78o4d3" path="res://scripts/quest_panel.gd" id="7_y08ki"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sr4ki"]
shader = ExtResource("2_my47q")
shader_parameter/blur_amount = 2.6650001265875

[node name="GeneralVillage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ve18s")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_sr4ki")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_my47q")
expand_mode = 1
stretch_mode = 3

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Party" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Party"

[node name="Quests" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quests"

[node name="Upgrades" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Upgrades"

[node name="Shop" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Shop"

[node name="PartyPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_sr4ki")

[node name="BG" type="ColorRect" parent="PartyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9705979, 0.53436285, 0.6283792, 1)

[node name="Lineup" type="Control" parent="PartyPanel"]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.4
anchor_bottom = 0.6

[node name="VBoxContainer" type="VBoxContainer" parent="PartyPanel/Lineup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MonsterEntry1" parent="PartyPanel/Lineup/VBoxContainer" instance=ExtResource("6_ltora")]
layout_mode = 2

[node name="MonsterEntry2" parent="PartyPanel/Lineup/VBoxContainer" instance=ExtResource("6_ltora")]
layout_mode = 2

[node name="MonsterEntry3" parent="PartyPanel/Lineup/VBoxContainer" instance=ExtResource("6_ltora")]
layout_mode = 2

[node name="MonsterEntry4" parent="PartyPanel/Lineup/VBoxContainer" instance=ExtResource("6_ltora")]
layout_mode = 2

[node name="SelectedInfo" type="Control" parent="PartyPanel"]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.65
anchor_right = 0.4
anchor_bottom = 0.85

[node name="Frame" type="ColorRect" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8217887, 0.8217887, 0.8217885, 1)

[node name="Icon" type="TextureRect" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_right = 0.33
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5bsx0")
expand_mode = 1
stretch_mode = 5

[node name="left" type="Label" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_right = 0.99
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "
hp: 123
xp: 123/1234
Item slots: 2"

[node name="name" type="Label" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_right = 0.73
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "longnametesta"

[node name="right" type="Label" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 0.99
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "LVL:
ATK:
DEF:
SPD:"

[node name="right stats" type="Label" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.73
anchor_right = 0.99
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "60
134
134
123"
horizontal_alignment = 2

[node name="Button" type="Button" parent="PartyPanel/SelectedInfo"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "View attacks"

[node name="MonsterList" type="Control" parent="PartyPanel"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PartyPanel/MonsterList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PartyPanel/MonsterList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MonsterEntry" parent="PartyPanel/MonsterList/ScrollContainer/VBoxContainer" instance=ExtResource("6_ltora")]
layout_mode = 2

[node name="QuestPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_y08ki")

[node name="ColorRect" type="ColorRect" parent="QuestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.37036446, 0.3703645, 0.37036446, 1)

[node name="QuestControl" type="Control" parent="QuestPanel"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuestPanel/QuestControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quest1" type="Button" parent="QuestPanel/QuestControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="QuestPanel/QuestControl/VBoxContainer/Quest1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="name_desc" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "NAME FILLER
DESC"

[node name="Label" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Progress: 20/200"
horizontal_alignment = 2

[node name="Quest2" type="Button" parent="QuestPanel/QuestControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="QuestPanel/QuestControl/VBoxContainer/Quest2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="name_desc" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "NAME FILLER
DESC"

[node name="Label" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Progress: 20/200"
horizontal_alignment = 2

[node name="Quest3" type="Button" parent="QuestPanel/QuestControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="QuestPanel/QuestControl/VBoxContainer/Quest3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="name_desc" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "NAME FILLER
DESC"

[node name="Label" type="Label" parent="QuestPanel/QuestControl/VBoxContainer/Quest3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.985
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Progress: 20/200"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 20.0
offset_right = 152.0
offset_bottom = 51.0
text = "Return to island"

[connection signal="pressed" from="GridContainer/Party" to="." method="_on_party_pressed"]
[connection signal="pressed" from="GridContainer/Quests" to="." method="_on_quests_pressed"]
[connection signal="pressed" from="GridContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="GridContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
